--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,13 @@
 /**
  * Filename: styles.css
  * Project: Palindrome Checker
- * Author: Jeremy Gammill | github.com/Jeremy-Gammill
+ * Live Demo: https://jeremy-gammill.github.io/palindrome-checker/
+
+ * Author: Jeremy Gammill | github.com/jeremy-gammill
  * Date Created: March 22, 2024
  * Last Modified: March 24, 2024
  * License: MIT
+ *
  * Description:
  *   Developed for the freeCodeCamp JavaScript Algorithms and Data Structures certification.
  *  
